Forms v 1.9.1 : em in label, fix for inputs on iphone

--- a/css/cssc-forms.css
+++ b/css/cssc-forms.css
@@ -3,7 +3,7 @@
 /*
 Name: Forms
 URL: http://github.com/Darklg/CSSCommon
-Version: 1.9
+Version: 1.9.1
 License: MIT
 */
 
@@ -86,6 +86,7 @@ button {
 .cssc-form input[type=url],
 .cssc-form input[type=email],
 .cssc-form input[type=password] {
+    -webkit-appearance: none;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -273,6 +274,13 @@ button {
 .float-form .box .long-label {
     top: -1px;
     line-height: 13px;
+}
+
+.cssc-form .fake-label em,
+.cssc-form label em {
+    font-style: normal;
+    font-weight: bold;
+    color: #369;
 }
 
 /* Aide */
